@@ -18,7 +18,7 @@ public class Engine extends GameEngine {
         enemyMoves = new ArrayList<>();
         movesLeft = new ArrayList<>();
         myMoves = new ArrayList<>();
-        for(int i = 0; i < 9; i++) {
+        for (int i = 0; i < 9; i++) {
             movesLeft.add(i);
         }
     }
@@ -32,12 +32,17 @@ public class Engine extends GameEngine {
         if (game.gameSequence.isEmpty()) {
             myMoves.add(gb.getMoveCommon(enemyMoves, movesLeft, myMoves));
             movesLeft.remove(myMoves.get(myMoves.size() - 1));
-        } else if (game.gameMode == GameMode.ACHI) {
+        } else if (game.gameSequence.size() == 8) {
             gb = new AchiBehavior();
             enemyMoves.add(game.gameSequence.getLast());
             movesLeft.remove(enemyMoves.get(enemyMoves.size() - 1));
             myMoves.add(gb.getMoveCommon(enemyMoves, movesLeft, myMoves));
-            movesLeft.remove(myMoves.get(myMoves.size() - 1));
+            movesLeft.set(0, myMoves.get(myMoves.size() - 1));
+        } else if (game.gameSequence.size() > 8) {
+            gb = new AchiBehavior();
+            movesLeft.set(0, game.gameSequence.getLast());
+            myMoves.add(gb.getMoveCommon(enemyMoves, movesLeft, myMoves));
+            movesLeft.set(0, myMoves.get(myMoves.size() - 1));
         } else {
             enemyMoves.add(game.gameSequence.getLast());
             movesLeft.remove(enemyMoves.get(enemyMoves.size() - 1));
@@ -46,14 +51,15 @@ public class Engine extends GameEngine {
         }
         System.out.print("Enemy Moves: ");
         enemyMoves.stream().forEach((enemyMove) -> {
-            System.out.print(enemyMove);
+            System.out.print(enemyMove + " ");
         });
         System.out.println();
         System.out.print("My Moves: ");
         for (Integer myMove : myMoves) {
-            System.out.print(myMove);
+            System.out.print(myMove + " ");
         }
-        //System.out.println(myMoves.get(myMoves.size() - 1));
+        System.out.println();
+        System.out.println("This Move: " + myMoves.get(myMoves.size() - 1));
         //System.out.println(game.gameSequence.contains(myMoves.get(myMoves.size() - 1)));
         return myMoves.get(myMoves.size() - 1);
     }
